# tiki-ecommerce-data-lakehouse

./: .env.example  .gitignore  DIM_FACT_TABLES.md  Makefile  README.md  docker-compose.yml  pyproject.toml  superset_config.py
crawler/: fetch_tiki_8322.py
dags/: tiki_daily_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/dimensions/: dim_brand.sql  dim_category.sql  dim_date.sql  dim_delivery.sql  dim_product.sql  dim_seller.sql  schema.yml
dbt/models/marts/facts/: fact_product_snapshot.sql  schema.yml
dbt/models/staging/: schema.yml  stg_products.sql
scripts/: bootstrap_lakehouse.ps1  export_superset_dashboard.ps1  import_superset_dashboard.ps1  reset_lakehouse_metadata.ps1
trino/: init_iceberg_jdbc_catalog.sql  register_raw_tables.sql  register_tables.sql
trino/etc/: jvm.config  node.properties
trino/etc/catalog/: hive.properties.example  iceberg.properties.example  lakehouse.properties.example
