[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiki-lakehouse"
version = "0.1.0"
description = "A lakehouse project with crawler and dbt"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Crawler
    "requests>=2.31.0",
    "pandas>=2.2.3",
    "boto3>=1.34.69",
    "python-dotenv>=1.0.1",
    "pyarrow>=18.0.0",

    # dbt
    "dbt-duckdb>=1.9.0",
    "dbt-trino>=1.9.0",
    "sqlfluff>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pre-commit"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "crawler/tests",
]

[tool.setuptools]
packages = ["crawler"]
